# Eaquel_Service

./: settings.gradle.kts
.github/workflows/: ci.yml
Gradle/: libs.versions.toml
Service/: build.gradle.kts  proguard-rules.pro
Service/Source/Main/: AndroidManifest.xml
Service/Source/Main/Kotlin/com/eaquel/service/: Activity.kt  Core.kt  Overlay.kt
Service/Source/Main/Native/: CMakeLists.txt  Engine.cpp
Service/Source/Main/res/values/: colors.xml  strings.xml  themes.xml
